# livemcp

./: .gitignore  README.md  pyproject.toml
docs/: native-max-for-live-support.md
max_bridge/: README.md  device_bridge.js  device_server.js  schema.json
remote_script/LiveMCP/: __init__.py  browser.py  errors.py  protocol.py  server.py
remote_script/LiveMCP/handlers/: __init__.py  arrangement.py  clips.py  devices.py  grooves.py  max.py  mixer.py  session.py  tracks.py
remote_script/LiveMCP/max_bridge/: __init__.py  client.py
scripts/: dev_install.sh  install.py  install.sh  publish.sh  restart_ableton.sh  uninstall.py  uninstall.sh
src/livemcp/: __init__.py  __main__.py  ableton.py  connection.py  errors.py  installer.py  max_bridge_device.py  protocol.py  resources.py  server.py
src/livemcp/docs/: __init__.py  catalog.py  index.py  sync.py
src/livemcp/tools/: __init__.py  arrangement.py  clips.py  devices.py  docs.py  grooves.py  max.py  mixer.py  session.py  tracks.py
tests/: test_ableton.py  test_connection.py  test_docs_tools.py  test_installer.py  test_max_bridge_client.py  test_max_handlers.py  test_max_tools.py  test_packaging.py  test_registry_guards.py  test_resources.py  test_server_cli.py  test_server_protocol.py  test_session_tools.py
tools/: build_amxd.py
