[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livemcp"
version = "1.1.0"
description = "The definitive Model Context Protocol bridge for Ableton Live"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ala Arab"}]
keywords = ["ableton", "live", "mcp", "model-context-protocol", "music", "midi", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
livemcp = "livemcp.server:main"

[project.urls]
Homepage = "https://github.com/alaarab/livemcp"
Repository = "https://github.com/alaarab/livemcp"
"Bug Tracker" = "https://github.com/alaarab/livemcp/issues"

[tool.hatchling.build]
packages = ["src/livemcp"]

[tool.ruff]
line-length = 100
